{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 32,
  "lineage": "e6b366f2-ad2b-136a-c2e4-5d59f45be926",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f1296622ea66504",
            "association_id": "eipassoc-049c1a5ed8b1fb209",
            "domain": "vpc",
            "id": "eipalloc-02f1296622ea66504",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-011bd5750d43865b4",
            "private_dns": "ip-10-0-1-206.eu-west-1.compute.internal",
            "private_ip": "10.0.1.206",
            "public_dns": "ec2-52-212-233-139.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.212.233.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:internet-gateway/igw-046674e7c0b5f5f93",
            "id": "igw-046674e7c0b5f5f93",
            "owner_id": "566083893252",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-088ea64a0e552c708"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f1296622ea66504",
            "connectivity_type": "public",
            "id": "nat-0060a7786d58c7fb5",
            "network_interface_id": "eni-011bd5750d43865b4",
            "private_ip": "10.0.1.206",
            "public_ip": "52.212.233.139",
            "subnet_id": "subnet-0e9ff122f7c7bef55",
            "tags": {
              "Name": "NatGateWay"
            },
            "tags_all": {
              "Name": "NatGateWay"
            }
          },
          "dependencies": [
            "aws_subnet.public_1",
            "aws_vpc.main",
            "aws_eip.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:route-table/rtb-066ef9c602d390f4b",
            "id": "rtb-066ef9c602d390f4b",
            "owner_id": "566083893252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0060a7786d58c7fb5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NGW-Route-Table"
            },
            "tags_all": {
              "Name": "NGW-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-088ea64a0e552c708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.ngw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:route-table/rtb-0f58f5fbb6d2bab18",
            "id": "rtb-0f58f5fbb6d2bab18",
            "owner_id": "566083893252",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privateRouteTable"
            },
            "tags_all": {
              "Name": "privateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-088ea64a0e552c708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:route-table/rtb-0690598ed7ebefd21",
            "id": "rtb-0690598ed7ebefd21",
            "owner_id": "566083893252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046674e7c0b5f5f93",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "tags_all": {
              "Name": "publicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-088ea64a0e552c708"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a2bfe07a24abcd2",
            "route_table_id": "rtb-066ef9c602d390f4b",
            "subnet_id": "subnet-0bf0f1ae11e5fe8e7"
          },
          "dependencies": [
            "aws_subnet.public_1",
            "aws_vpc.main",
            "aws_eip.lb",
            "aws_nat_gateway.ngw",
            "aws_route_table.nat_route_table",
            "aws_subnet.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f7d24a1197fe32e",
            "route_table_id": "rtb-0f58f5fbb6d2bab18",
            "subnet_id": "subnet-0562257e8f42c1bbb"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b4de496fcc673b2",
            "route_table_id": "rtb-066ef9c602d390f4b",
            "subnet_id": "subnet-0500d3daa7cd52c96"
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_nat_gateway.ngw",
            "aws_route_table.nat_route_table",
            "aws_subnet.private_3",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00463a91101ec0ebd",
            "route_table_id": "rtb-0f58f5fbb6d2bab18",
            "subnet_id": "subnet-0bb40dc44737d7e07"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_4",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070e3c14711fea70b",
            "route_table_id": "rtb-0690598ed7ebefd21",
            "subnet_id": "subnet-0e9ff122f7c7bef55"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a44bb9504ece759",
            "route_table_id": "rtb-0690598ed7ebefd21",
            "subnet_id": "subnet-030e2027b08d24e85"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:subnet/subnet-0bf0f1ae11e5fe8e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0bf0f1ae11e5fe8e7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566083893252",
            "tags": {
              "Name": "Private-1"
            },
            "tags_all": {
              "Name": "Private-1"
            },
            "vpc_id": "vpc-088ea64a0e552c708"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:subnet/subnet-0562257e8f42c1bbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0562257e8f42c1bbb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566083893252",
            "tags": {
              "Name": "Private-2"
            },
            "tags_all": {
              "Name": "Private-2"
            },
            "vpc_id": "vpc-088ea64a0e552c708"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:subnet/subnet-0500d3daa7cd52c96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0500d3daa7cd52c96",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566083893252",
            "tags": {
              "Name": "Private-3"
            },
            "tags_all": {
              "Name": "Private-3"
            },
            "vpc_id": "vpc-088ea64a0e552c708"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:subnet/subnet-0bb40dc44737d7e07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0bb40dc44737d7e07",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566083893252",
            "tags": {
              "Name": "Private-4"
            },
            "tags_all": {
              "Name": "Private-4"
            },
            "vpc_id": "vpc-088ea64a0e552c708"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:subnet/subnet-0e9ff122f7c7bef55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e9ff122f7c7bef55",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566083893252",
            "tags": {
              "Name": "Public-1"
            },
            "tags_all": {
              "Name": "Public-1"
            },
            "vpc_id": "vpc-088ea64a0e552c708"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:subnet/subnet-030e2027b08d24e85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-030e2027b08d24e85",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566083893252",
            "tags": {
              "Name": "Public-2"
            },
            "tags_all": {
              "Name": "Public-2"
            },
            "vpc_id": "vpc-088ea64a0e552c708"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:566083893252:vpc/vpc-088ea64a0e552c708",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ac3a257cc233ab1",
            "default_route_table_id": "rtb-07e7dd79dc5bf1a85",
            "default_security_group_id": "sg-0dae6c02d7a3d6ed3",
            "dhcp_options_id": "dopt-0cd96394720674e66",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-088ea64a0e552c708",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07e7dd79dc5bf1a85",
            "owner_id": "566083893252",
            "tags": {
              "Name": "Terraform_Labs"
            },
            "tags_all": {
              "Name": "Terraform_Labs"
            }
          }
        }
      ]
    }
  ]
}